# PicASpot

./: .editorconfig  .env  .env.mock  .gitattributes  .gitignore  KAFKA_MIGRATION_SUMMARY.md  LICENSE  README.md  docker-compose-cuda.yaml  docker-compose-dev.yaml  docker-compose.yaml  package-lock.json
src/backend/: .dockerignore  .gitignore  Dockerfile  TESTING_IMPLEMENTATION_PLAN.md  TODO  TODO.txt  alembic.ini  entrypoint.sh  features.md  pyproject.toml  recommendations.md
src/backend/app/: main.py  router.py  settings.py
src/backend/app/area/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/backend/app/auth/: authentication.py  dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py  user_manager.py
src/backend/app/celery/: worker.py
src/backend/app/celery/tasks/email_tasks/: manager.py  tasks.py
src/backend/app/celery/tasks/email_tasks/templates/: base_email.html  password_reset.html  verify.html
src/backend/app/celery/tasks/mail_tasks/: manager.py
src/backend/app/celery/tasks/mail_tasks/templates/: base_email.html  password_reset.html
src/backend/app/core/: dependencies.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  response.py  route.py  schemas.py  schemas_base.py  utils.py
src/backend/app/core/repository/: RELATIONSHIPS_USAGE_GUIDE.md  __init__.py  abstract_repository.py  base_repository.py
src/backend/app/database/: __init__.py  db_helper.py  dependencies.py  manager.py  mixins.py  redis.py
src/backend/app/database/alembic/: README  env.py
src/backend/app/database/alembic/versions/: 35ca7a9dc3a3_modified_unlock_v2.py  5ae3b046861f_create_attempt.py  674880dd2e9b_add_profile_picture_path_to_users.py  770ec9ac9cab_update_landmark_hint_and_photo_locations.py  85232897085c_create_area_table.py  8c79c08c0b0d_add_landmark_hint_and_photo_location.py  b0f64cd4d997_initial_migration.py  cec6f9bc90cc_create_landmarks_and_unlocks_tables.py  e99b5e1a5a73_fix_attempt.py  ee75e33e7c80_modified_unlock.py  eecd305c23a4_add_indexes.py  f10456b44139_fixed_names.py
src/backend/app/images/: __init__.py  converter.py  exceptions.py  formats.py  resizer.py
src/backend/app/kafka/: __init__.py  config.py  kafka_consumer.py  kafka_producer.py  kafka_topic_management.py  manager.py  schemas.py
src/backend/app/kafka/producers/: __init__.py  base.py  email_publisher.py
src/backend/app/kafka/schemas/: __init__.py  email_events.py
src/backend/app/landmark/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/backend/app/middleware/: __init__.py  logging_middleware.py  ratelimiter_middleware.py  timezone_middleware.py
src/backend/app/storage/: __init__.py  dependencies.py  manager.py  router.py  service.py  utils.py
src/backend/app/unlock/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/backend/app/user/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/backend/app/users/: dependencies.py  repository.py  router.py  schemas.py  service.py
src/backend/tests/: conftest.py  factories.py  test_smoke.py  test_timezone.py
src/backend/tests/e2e/: __init__.py  test_user_journey.py
src/backend/tests/factories/: __init__.py  area_factory.py  landmark_factory.py  user_factory.py
src/backend/tests/fixtures/: __init__.py  app.py  database.py  redis.py
src/backend/tests/integration/: __init__.py  test_auth_endpoints.py  test_user_api.py
src/backend/tests/unit/: __init__.py  test_auth_service.py  test_security.py
src/backend/tests/utils/: __init__.py  assertions.py  helpers.py
src/backup/: .gitignore  README.md  backup.sh
src/email-service/: Dockerfile  README.md  pyproject.toml
src/email-service/app/: consumer.py  email_manager.py  logging_config.py  main.py  schemas.py  settings.py
src/email-service/app/core/: __init__.py  logging.py  logging_config.py
src/email-service/app/email/: manager.py  tasks.py
src/email-service/app/email/templates/: base_email.html
src/email-service/app/handlers/: __init__.py  email_manager.py
src/email-service/app/handlers/templates/: base_email.html
src/email-service/app/kafka/: __init__.py  kafka_consumer.py
src/email-service/tests/: __init__.py  conftest.py  test_consumer.py  test_email_manager.py
src/frontend/: .env  .gitignore  .prettierrc  README.md  app.json  global.css  package-lock.json  package.json
src/frontend/app/: _layout.tsx  add-marker.tsx  index.tsx  login.tsx  map.tsx  register.tsx  verify-email.tsx
src/frontend/app/(auth)/: login.tsx  register.tsx  verify-email.tsx
src/frontend/app/(dashboard)/: Feed.tsx  Map.tsx  Profile.tsx  Settings.tsx  _layout.tsx
src/frontend/app/post/: [id].tsx
src/frontend/components/: index.ts
src/frontend/components/camera/: cameraStyle.ts
src/frontend/components/custom/: index.ts  map-controls.tsx  map-example.tsx  map.tsx
src/frontend/components/feed_components/: PostCard.tsx  postCardStyle.ts  posts.ts  user.ts
src/frontend/components/map-components/: MainMap.tsx  map.tsx  (+1 more)
src/frontend/contexts/: AuthContext.tsx  LandmarkContext.tsx  LocationContext.tsx
src/frontend/lib/: api.ts  auth.ts  map.ts
src/frontend/scripts/: set-dev-host.js
src/frontend/theme/: index.ts  theme.ts  useTheme.ts
src/image-service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/image-service-dev/: Dockerfile  pyproject.toml
src/image-service-dev/app/: main.py
src/image-service-dev/app/kafka/: __init__.py
src/image-service-dev/app/storage/: dependencies.py  router.py  service.py
src/image-service-dev/app/verification/: service.py
src/image-service/app/: main.py  settings.py
src/image-service/app/core/: logging.py
src/image-service/app/email/: manager.py
src/image-service/app/kafka/: kafka_consumer.py  kafka_producer.py  schemas.py
src/image-service/app/storage/: __init__.py  directories.py  exceptions.py  service.py
src/image-service/app/verification/: __init__.py  service.py
src/nginx/: .gitignore  entrypoint.sh
src/nginx/conf/: nginx.conf
(+4 files in other folders)
