[project]
name = "backend"
version = "0.1.0"
description = "PicASpot backend"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "asgiref>=3.11.0",
    "bcrypt>=5.0.0",
    "celery>=5.5.3",
    "celery-types==0.23.0",
    "cryptography>=46.0.3",
    "fastapi-mail>=1.5.8",
    "fastapi[standard]>=0.122.0",
    "flower>=2.0.1",
    "geoalchemy2[shapely]>=0.18.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "faker>=37.11.0",
]


[dependency-groups]
dev = [
    "faker>=37.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[tool.isort]
profile = "black"
skip_gitignore = true
known_first_party = ["app", "tests"]

[tool.ruff]
target-version = "py314"
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # complexity
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
