[project]
name = "image-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "aiokafka>=0.12.0",
    "geomatchai",
]

[tool.uv.sources]
geomatchai = { git = "https://github.com/LilConsul/GeoMatchAI" }
